Change navigation icon colors and add comments

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    // Dependency for bottom navigation
     implementation 'com.google.android.material:material:1.0.0'
 }
